# pport

./: .gitignore  .gitmodules  API.md  CMakeLists.txt  Makefile  README.md
cli/: CMakeLists.txt  Cargo.toml  Makefile  Makefile.d  compile_commands.json
cli/include/: Network.h  str_utils.h  udp_send.h
cli/lib/argparse/: CMakeLists.txt
cli/src/: Network.c  main.c  main.rs  str_utils.c  udp_client.rs  udp_send.c
include/: Arg.hpp  Args.hpp  command.h  parallel.h  tokstr.h
lib/: Arg.cpp  Args.cpp
pport-cli/: CMakeLists.txt  Makefile
pport-cli/include/: Arg.hpp  Args.hpp  Client.hpp  bArray.hpp
pport-cli/src/: Arg.cpp  Args.cpp  Client.cpp  main.cpp
pport-server/: Makefile
pport-server/include/: Command.h  Handler.h  Parallel.h  Pin.h  Server.h  Utils.h
pport-server/src/: Command.cpp  Handler.cpp  Parallel.cpp  Pin.cpp  Server.cpp  Utils.cpp  main.cpp
server/: CMakeLists.txt  Cargo.toml  Makefile  Makefile.d  compile_commands.json  valgrind.gpt
server/include/: Command.h  CommandException.hpp  Parallel.h  PinException.hpp  Server.h  command.h  config.h  globals.h  log.h  parallel.h  pio.h  server.h  str_utils.h  test_outb.h  timings.h  tokstr.h
server/lib/log.c/: CMakeLists.txt
server/lib/log.c/src/: log.c
server/src/: Command.cpp  Parallel.cpp  Server.cpp  command.c  command.rs  config.c  config.rs  io.rs  log.c  main.c  main.cpp  main.rs  parallel.c  pin.rs  pio.s  pio_d.s  pio_w.s  server.c  str_utils.cpp  test_outb.c  tests.rs  timings.c  tokstr.c  udp_server.rs
src/: command.c  main.c  main.cpp  parallel.c  tokstr.c
test/: command.test.c
web-ui/: index.html  manifest.json  package.json  settings.html  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web-ui/css/: settings.css  styles.css
web-ui/public/: manifest.json
web-ui/src/: Socket.ts  global.ts  globals.css  script.ts  settings.css  settings.ts  styles.css
