[package]
name = "rs-pport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.150"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = ["full"] }
